# legacy.rogue-scholar

./: .dockerignore  .gitignore  Dockerfile  Gemfile  README.md  chakra-ui.config.ts  cypress.config.ts  docker-compose.yml  docker-entrypoint.sh  i18next.d.ts  middleware.ts  next-i18next.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  pyproject.toml  tailwind.config.js  theme.js  tsconfig.json  turbo.json
.github/workflows/: doi-registration.yml  doi-update.yml  main.yml  preview.yml  publish.yml  register-dois.yml  release.yaml  update-blogs.yml  update-dois.yml  update-posts.yml
.next/: trace
apps/docs/: README.md  _quarto.yml  ghost.qmd  guidelines.qmd  hugo.qmd  index.qmd  jekyll.qmd  next.config.js  package.json  platforms.qmd  pnpm-lock.yaml  theme.config.tsx  tsconfig.json  wordpress.qmd
apps/web/: .eslintrc.js  (+18 more)
components/: Loader.tsx
config/: i18n.ts  index.ts
docs/: _publish.yml  _quarto.yml  api.qmd  index.qmd  references.qmd
lib/: env.ts  helpers.ts  pocketbaseClient.ts  supabaseClient.ts  typesense-schema-blogs.json  typesense-schema-posts.json  typesenseClient.ts
mail-templates/: confirm-signup.html  invite-user.html  magic-link.mjml  reset-password.html
pages/: 404.tsx  _app.tsx  _document.tsx  about.tsx  blogs.tsx  board.tsx  index.tsx
public/: robots.txt  rogue-scholar.opml  sitemap-0.xml  sitemap.xml
scripts/: remove-board-locals.js
supabase/: config.toml
types/: blog.ts  database.types.ts  supabase.ts  typesense.ts
utils/: SupabaseClient.ts  helpers.ts  useWindowDimensions.ts
(+451 files in other folders)
