[tool.poetry]
name = "rogue-scholar"
version = "0.1.0"
description = ""
authors = ["Martin Fenner <martin@front-matter.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
commonmeta-py = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
